cabal-version:       >=1.10

name:                ledger-ondisk
version:             0.1.0.0
synopsis:            Prototype for on disk ledger data structure
-- description:
-- bug-reports:
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
author:              Douglas Wilson
maintainer:
copyright:           2021 Input Output (Hong Kong) Ltd.
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md


library
  -- other-modules:
  -- other-extensions:
  exposed-modules:     LedgerOnDisk
                       LedgerOnDisk.Class
  build-depends:       base,
                       unordered-containers,
                       transformers,
                       mtl,
                       hashable
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite ledger-ondisk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base,
                       ledger-ondisk,
                       tasty,
                       tasty-quickcheck
  ghc-options:         -Wall
