cabal-version:       >=1.10

name:                ledger-ondisk
version:             0.1.0.0
synopsis:            Prototype for on disk ledger data structure
-- description:
-- bug-reports:
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
author:              Douglas Wilson
maintainer:
copyright:           2021 Input Output (Hong Kong) Ltd.
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md


library
  -- other-modules:
  -- other-extensions:
  exposed-modules:     LedgerOnDisk
                       LedgerOnDisk.Suite
                       LedgerOnDisk.FromKV
                       LedgerOnDisk.Class
                       LedgerOnDisk.ClassWithExceptions
                       LedgerOnDisk.Simple
                       LedgerOnDisk.Pure
                       LedgerOnDisk.WWB
                       LedgerOnDisk.QSM.Model
                       LedgerOnDisk.QSM.Suite
                       -- LedgerOnDisk.App.WWB
                       LedgerOnDisk.Util
                       LedgerOnDisk.Diff
                       LedgerOnDisk.Util.RandomTime
                       LedgerOnDisk.Util.Trace

                       Test.Tasty.QuickCheckStateMachine
  build-depends:       base,
                       unordered-containers,
                       transformers,
                       mtl,
                       hashable,
                       exceptions,
                       quickcheck-state-machine,
                       quickcheck-instances,
                       QuickCheck,
                       tree-diff,
                       tasty,
                       tasty-quickcheck,
                       foldl,
                       containers,
                       sop-core,
                       tagged,
                       async,
                       stm,
                       fingertree,
                       time,
-- unused at time of writing
                       quickcheck-classes,
                       tasty-quickcheck-laws,
                       streaming,
                       random,
                       contra-tracer,
                       dependent-map,
                       dependent-sum

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite ledger-ondisk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base,
                       ledger-ondisk,
                       tasty,
                       tasty-quickcheck,
                       QuickCheck,
                       quickcheck-instances
  ghc-options:         -Wall

executable wwb
   main-is:            wwb.hs
   hs-source-dirs:     app
   ghc-options:        -threaded -rtsopts
   build-depends:      ledger-ondisk
