cabal-version:       >=1.10

name:                ledger-ondisk
version:             0.1.0.0
synopsis:            Prototype for on disk ledger data structure
-- description:
-- bug-reports:
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
author:              Douglas Wilson
maintainer:
copyright:           2021 Input Output (Hong Kong) Ltd.
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md


library
  -- other-modules:
  -- other-extensions:
  exposed-modules:     LedgerOnDisk
                       LedgerOnDisk.Suite
                       LedgerOnDisk.Diff
                       -- LedgerOnDisk.FromKV
                       LedgerOnDisk.Class
                       LedgerOnDisk.ClassWithExceptions
                       LedgerOnDisk.Simple
                       LedgerOnDisk.Pure
                       LedgerOnDisk.WWB
                       LedgerOnDisk.Haskey
                       LedgerOnDisk.QSM.Model
                       LedgerOnDisk.QSM.Suite
                       LedgerOnDisk.Util
                       -- LedgerOnDisk.Util.RandomTime
                       LedgerOnDisk.Util.Trace

                       LedgerOnDisk.V2.OnDiskMappings
                       LedgerOnDisk.V2.Query
                       LedgerOnDisk.V2.Db
                       LedgerOnDisk.V2.DumbDb
                       LedgerOnDisk.V2.SmartDb
                       LedgerOnDisk.V2.Diff
                       LedgerOnDisk.V2.Fingertree
                       LedgerOnDisk.V2.Snapshot

                       LedgerOnDisk.App.HaskeyKV


                       LedgerOnDisk.KVHandle.OnDiskMappings
                       LedgerOnDisk.KVHandle.Class
                       LedgerOnDisk.KVHandle.RangeQuery
                       LedgerOnDisk.KVHandle.RangeQuerySuite
                       LedgerOnDisk.KVHandle.ClassWithSnapshots


                       LedgerOnDisk.Haskey.Types
                       LedgerOnDisk.Haskey.Impl
                       LedgerOnDisk.Haskey.KVHandle
                       LedgerOnDisk.Haskey.KVHandleWithSnapshots

                       LedgerOnDisk.Mapping.Class
                       LedgerOnDisk.Mapping.PTMap

                       LedgerOnDisk.LowLevel.Class
                       LedgerOnDisk.LowLevel.InMemory

                       Example.Types
                       Example.Rules
                       Example.Arbitrary
                       -- -- LedgerOnDisk.App.WWB
                       -- Example
                       -- ExampleAbstractMap
                       -- MapClass
                       -- KVableClass

                       Test.Tasty.QuickCheckStateMachine
                       Test.Tasty.QuickCheckLabels
  build-depends:       base,
                       unordered-containers,
                       transformers,
                       mtl,
                       hashable,
                       exceptions,
                       quickcheck-state-machine,
                       quickcheck-instances,
                       QuickCheck,
                       tree-diff,
                       tasty,
                       tasty-quickcheck,
                       foldl,
                       containers,
                       sop-core,
                       tagged,
                       async,
                       stm,
                       fingertree,
                       time,
-- unused at time of writing
                       quickcheck-classes,
                       tasty-quickcheck-laws,
                       streaming,
                       random,
                       contra-tracer,
                       dependent-map,
                       dependent-sum,
                       generics-sop,
                       lens,
                       haskey,
                       haskey-btree,
                       haskey-mtl,
                       binary,
                       optparse-applicative,
                       vector,
                       fast-logger,
                       monoidal-containers,
                       comonad,
                       constraints,
                       indextype,
                       io-sim,
                       io-classes

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite ledger-ondisk-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base,
                       ledger-ondisk,
                       tasty,
                       tasty-quickcheck,
                       QuickCheck,
                       quickcheck-instances
  ghc-options:         -Wall

executable haskeykv
   main-is:            haskey.hs
   hs-source-dirs:     app
   ghc-options:        -threaded -rtsopts
   build-depends:      ledger-ondisk
