cabal-version:      2.4
name:               monoidal-synchronisation
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            Apache-2.0
license-files:
  LICENSE
  NOTICE
author:             Marcin Szamotulski
maintainer:         coot@coot.me

-- A copyright notice.
copyright: 2021 Input Output (Hong Kong) Ltd.
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Data.Monoid.Synchronisation
  build-depends:    base >=4.9 && <4.15
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:     -rtsopts
                   -threaded
                   -Wall
                   -Wcompat
                   -Wincomplete-uni-patterns
                   -Wincomplete-record-updates
                   -Wpartial-fields
                   -Widentities
                   -Wredundant-constraints
                   -Wno-unticked-promoted-constructors

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  other-modules:       Test.Data.Monoid.Synchronisation
  build-depends:       base

                     , QuickCheck
                     , tasty
                     , tasty-quickcheck

                     , io-classes
                     , io-sim
                     , monoidal-synchronisation
  default-language: Haskell2010
  ghc-options:       -rtsopts
                     -threaded
                     -Wall
                     -Wcompat
                     -Wincomplete-uni-patterns
                     -Wincomplete-record-updates
                     -Wpartial-fields
                     -Widentities
                     -Wredundant-constraints
                     -Wno-unticked-promoted-constructors
