cabal-version: 3.0

name:                   monoidal-synchronisation
version:                0.1.0.1
synopsis:               Monoidal synchronisation
description:            Monoidal synchronisation.
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
author:                 Marcin Szamotulski
maintainer:             coot@coot.me
category:               Network
copyright:              2021-2023 Input Output Global Inc (IOG).
extra-source-files:     CHANGELOG.md

library
  exposed-modules:  Data.Monoid.Synchronisation
  build-depends:    base >=4.14 && <4.17
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:     -Wall
                   -Wcompat
                   -Wincomplete-uni-patterns
                   -Wincomplete-record-updates
                   -Wpartial-fields
                   -Widentities
                   -Wredundant-constraints
                   -Wno-unticked-promoted-constructors

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  other-modules:       Test.Data.Monoid.Synchronisation
  build-depends:       base >=4.14 && <4.17

                     , QuickCheck
                     , tasty
                     , tasty-quickcheck

                     , io-classes
                     , io-sim
                     , monoidal-synchronisation
  default-language: Haskell2010
  ghc-options:       -rtsopts
                     -threaded
                     -Wall
                     -Wcompat
                     -Wincomplete-uni-patterns
                     -Wincomplete-record-updates
                     -Wpartial-fields
                     -Widentities
                     -Wredundant-constraints
                     -Wno-unticked-promoted-constructors
