cabal-version:       2.2
name:                network-mux
version:             0.1.0.0
synopsis:            Multiplexing library
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
copyright:           2019 Input Output (Hong Kong) Ltd.
author:              Duncan Coutts, Marc Fontaine, Karl Knutsson, Marcin Szamotulski, Alexander Vieth, Neil Davies
maintainer:          duncan@well-typed.com, marcin.szamotulski@iohk.io, marc.fontaine@iohk.io, karl.knutsson@iohk.io, alex@well-typed.com, neil.davies@pnsol.com
category:            Network
build-type:          Simple
extra-source-files:  CHANGELOG.md

flag asserts
  description: Enable assertions
  manual:      False
  default:     False

Flag ipv6
  Description: Enable IPv6 test cases
  Manual: True
  -- Default to False since travis lacks IPv6 support
  Default: False

common demo-deps
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -fno-ignore-asserts
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints

library
  build-depends:       base            >=4.9 && <4.15,
                       io-sim-classes  >=0.1 && <0.3,
                       contra-tracer   >=0.1 && <0.2,

                       array           >=0.5 && <0.6,
                       binary          >=0.8 && <0.11,
                       bytestring      >=0.10 && <0.11,
                       containers      >=0.5 && <0.7,
                       -- The Windows version of network-3.1.2 is missing
                       -- functions, see
                       -- https://github.com/haskell/network/issues/484
                       network         >=3.1.2 && <3.2,
                       process         >=1.6 && <1.7,
                       statistics-linreg
                                       >=0.3 && <0.4,
                       vector          >=0.12 && <0.13,
                       time            >=1.9.1 && <1.11,
                       quiet

  if os(windows)
    build-depends:     Win32           >= 2.5.4.1 && <3.0,
                       Win32-network   >=0.1 && <0.2

  ghc-options:         -Wall
                       -Wno-unticked-promoted-constructors
  if flag(asserts)
     ghc-options:      -fno-ignore-asserts
  hs-source-dirs:      src
  exposed-modules:     Network.Mux
                       Network.Mux.Channel
                       Network.Mux.Codec
                       Network.Mux.Compat
                       Network.Mux.Egress
                       Network.Mux.Ingress
                       Network.Mux.Time
                       Network.Mux.Timeout
                       Network.Mux.Types
                       Network.Mux.Trace
                       Network.Mux.Bearer.AttenuatedChannel
                       Network.Mux.Bearer.Pipe
                       Network.Mux.Bearer.Queues
                       Network.Mux.Bearer.Socket
                       Network.Mux.DeltaQ.TraceStats
                       Network.Mux.DeltaQ.TraceStatsSupport
                       Network.Mux.DeltaQ.TraceTransformer
                       Network.Mux.DeltaQ.TraceTypes
                       Control.Concurrent.JobPool
  if os(windows)
    exposed-modules:
                       Network.Mux.Bearer.NamedPipe
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
                       -Wno-unticked-promoted-constructors

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Test.Mux
                       Test.Mux.ReqResp
                       Test.Mux.Timeout
  default-language:    Haskell2010
  build-depends:       base,
                       io-sim-classes,
                       io-sim            >=0.2 && < 0.3,
                       contra-tracer,
                       network-mux,
                       Win32-network,

                       array,
                       binary,
                       bytestring,
                       cborg,
                       containers,
                       hashable,
                       network,
                       process,
                       QuickCheck,
                       splitmix,
                       serialise,
                       stm,
                       tasty,
                       tasty-quickcheck,
                       tasty-hunit,
                       time

  if os(windows)
    build-depends:     Win32           >= 2.5.4.1 && <3.0,
  ghc-options:         -threaded
                       -Wall
                       -fno-ignore-asserts
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
                       -Wno-unticked-promoted-constructors
  if flag(ipv6)
    cpp-options:       -DOUROBOROS_NETWORK_IPV6

executable mux-demo
  import:              demo-deps
  hs-source-dirs:      demo, test
  main-is:             mux-demo.hs
  other-modules:       Test.Mux.ReqResp
  build-depends:       base,
                       directory,
                       network-mux,
                       io-sim-classes,
                       contra-tracer,
                       stm,

                       binary,
                       bytestring,
                       cborg,
                       serialise
  if os(windows)
    build-depends:     Win32,
                       Win32-network
  else
    build-depends:     network

executable cardano-ping
  import:              demo-deps
  hs-source-dirs:      demo
  main-is:             cardano-ping.hs
  build-depends:       base,
                       aeson,
                       network-mux,
                       io-sim-classes,
                       contra-tracer,

                       bytestring,
                       cborg,
                       network,
                       tdigest,
                       text
  if os(windows)
    buildable:         False
  else
    buildable:         True
