name:                ntp-client
version:             0.0.1
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag demo
  description: Build a demo application
  default: True
  manual: True

library
  exposed-modules:      Network.NTP.Client
  other-modules:        Network.NTP.Client.Packet
                        Network.NTP.Client.Query
  build-depends:        async           >=2.2 && <2.3
                      , base            >=4.9 && <4.15
                      , binary          >=0.8 && <0.11
                      , bytestring      >=0.10 && <0.11
                      , contra-tracer   >=0.1 && <0.2
                      , network         >= 3.1.2 && <3.2
                      , stm             >=2.4 && <2.6
                      , time            >=1.9.1 && <1.11
                      , Win32-network   >=0.1 && <0.2

  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Widentities
                        -Wredundant-constraints
  default-extensions:   GeneralizedNewtypeDeriving

test-suite test
  hs-source-dirs:     test, src
  main-is:            Test.hs
  other-modules:        Network.NTP.Client.Packet
  type:               exitcode-stdio-1.0
  build-depends:        base            >=4.9 && <4.15
                      , binary          >=0.8 && <0.11
                      , time            >=1.9.1 && <1.11
                      , QuickCheck
                      , tasty
                      , tasty-quickcheck
  default-language:   Haskell2010
  ghc-options:        -Wall

executable demo-ntp-client
  hs-source-dirs:     demo
  main-is:            Main.hs
  if flag(demo)
     buildable: True
  else
     buildable: False
  build-depends:        async           >=2.2 && <2.3
                      , base            >=4.9 && <4.15
                      , contra-tracer   >=0.1 && <0.2
                      , Win32-network   >=0.1 && <0.2
                      , ntp-client
  default-language:   Haskell2010
  ghc-options:        -Wall
                      -threaded
